--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
         <a class="navbar-brand" href="/">Alura Loja</a>
     </nav>
     <div class="container">
+        <div class="card-footer">
+            <a href="/novo" class="btn btn-primary mb-2">Novo</a>
+        </div>
         <section class="card">
             <div>
                 <table class="table table-striped table-hover mb-0">
@@ -41,7 +44,6 @@
                 </table>
             </div>
         </section>
-
     </div>
 </body>
 
